# cs7641-assignment2

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
cs7641p2/: compare_fitness.py  eightqueens.py
tests/: test_cs7641p2.py
