[tool.poetry]
name = "cs7641p2"
version = "0.1.0"
description = ""
authors = ["Alan Franzoni <alan.franzoni@gatech.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
mlrose = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
